--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
         </form>
       </header>
 
+      <div class="putSomething">
+        <div class="blue-line">
+          <p class="error">Error</p>
+        </div>
+        <p class="put">Put something</p>
+        <button class="ok_btn">OK</button>
+      </div>
+
       <main>
         <h2>Tasks</h2>
         <div id="tasks"></div>
